# perplexity-hallucination-harness

./: .gitignore  Makefile  README.md  pyproject.toml
data/: qa.jsonl
src/: dataset.py  eval.py  metrics.py
tests/: test_metrics.py
