[tool.poetry]
name = "operation-guided-missile"
version = "0.1.0"
description = "Evaluation harness for Perplexity AI mixed-language hallucinations."
authors = ["Your Name <ngominhkhoa200^@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
typer = {extras = ["rich"], version = "^0.12.3"}
rich = "^14.0.0"
pytest = "^8.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mypy = "^1.10.1"
ruff = "^0.5.0"

[tool.poetry.scripts]
evaluate = "src.eval:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
packages = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C90", "N", "D"]
ignore = ["D100", "D104", "D107"]